# plasma-pong

./: Cargo.toml  README.md  justfile
src/: cli.rs  engine.rs  fps.rs  fragment.frag  main.rs  rect.rs  renderer.rs  state.rs  uniform.rs  vec.rs  vertex.vert  window.rs
src/renderer/: fluid.frag  fluid.rs  fluid.vert  glyph.rs  mod.rs  particle.frag  particle.vert  particles.rs  text.rs  utils.rs
