[package]
name = "plasma-pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
gl = "0.14.0"
glutin = "0.30.10"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
serde = "1.0.188"
serde_json = "1.0.107"
winit = "0.28.7"

[profile.release]
# Reducing binary size, see https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
panic = "abort"
