[package]
name = "plasma-pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
gl = "0.14.0"
glam = { version = "0.24.2", features = ["rand"] }
glutin = "0.30.10"
glutin-winit = "0.3.0"
glyph_brush = "0.7.8"
rand = "0.8.5"
raw-window-handle = "0.5.2"
rng = "0.1.0"
serde = "1.0.188"
serde_json = "1.0.107"
winit = "0.28.7"

# NOTE: removed since it makes the release dev loop slower, but should be enabled when shipping
# [profile.release]
# # Reducing binary size, see https://github.com/johnthagen/min-sized-rust
# strip = true
# lto = true
# codegen-units = 1
# panic = "abort"
